# practice-website

./: .gitignore  README.md  firebase.json  index.html  next.config.js  package-lock.json  package.json
backend/: README.md  pyproject.toml
backend/app/: .env  .env.example  Dockerfile  admin.py  app.py  auth.py  celery_config.py  database.py  docker-compose.yml  migrate.sh  models.py  requirements.txt  ruff.toml  schemas.py  seed_data.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 3a23cbd446f3_initial_migration.py  774f3ab6250e_enable_uuid_extension.py  79ff08d8abcb_initial_schema.py  add_coins_awarded_stages_column.py  add_coins_awarded_to_lesson_progress.py  add_email_verification_expires_at.py  add_pending_email_verifications.py  add_tree_columns_to_user_module_progress.py  drop_user_email_verification_columns.py  ef1eaa0defeb_sync_user_onboarding_columns.py  populate_learning_data.py  update_onboarding_5step_flow.py
backend/app/analytics/: __init__.py  admin_dashboard.py  classifier.py  event_tracker.py  scheduler.py  scoring_engine.py  scoring_signals.py  signal_extractors.py
backend/app/data/: us_cities.json
backend/app/routers/: analytics.py  auth.py  cities.py  dashboard.py  grow_your_nest.py  help_support.py  learning.py  materials.py  minigame.py  notifications.py  onboarding.py  quiz.py  rewards.py
backend/app/scripts/: cleanup_database.sh
backend/app/services/: __init__.py  email.py  hubspot.py
backend/app/tests/: run_grow_your_nest_tests.sh  test_auth_api.py  test_grow_your_nest.py  test_learning_api.py
(+560 files in other folders)
